# rebearm

./: README.md
Doc/: blob_chase.txt  commands.txt  darknet_ros_run.txt  demo.txt
rebearm/: CMakeLists.txt  package.xml
rebearm_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_bringup/param/: mcu.yaml
rebearm_control/: package.xml  setup.cfg  setup.py
rebearm_control/launch/: blob_all.launch.py  blob_getdata.launch.py  chase_ball.launch.py  chase_yolo.launch.py  joy_all.launch.py  key_all.launch.py  mimic_all.launch.py  motor_chase.launch.py  (+5 more)
rebearm_cv/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_interfaces/: CMakeLists.txt  package.xml
rebearm_ml/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_moveit/: .setup_assistant  CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rebearm_yolo/: package.xml  setup.cfg  setup.py
rebearm_yolo/config/: yolo_ros.yaml  yolo_ros_params.yaml
rebearm_yolo/launch/: cam_yolo.launch.py  yolo.launch.py  yolo_rebearm.launch.py
rebearm_yolo/rebearm_yolo/: ncnn_node.py  node.py  pt2ncnn.py
rebearm_yolo/weights/rebearm11n_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
rebearm_yolo/weights/yolo11n_ncnn_model/: metadata.yaml  model_ncnn.py
script/: buslinker2.rules  camSelect.sh  create_udev_rules_buslinker2.sh  create_udev_rules_daiso.sh  create_udev_rules_fit0701.sh  daiso.rules  delete_udev_rules_buslinker2.sh  delete_udev_rules_daiso.sh  delete_udev_rules_fit0701.sh  fit0701.rules
(+90 files in other folders)
