<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebearm</name>
  <version>0.1.1</version>
  <description>
    ROS 2 packages for rebearm
  </description>
  <license>Apache 2.0</license>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rebearm_bringup</exec_depend>
  <exec_depend>rebearm_description</exec_depend>
  <exec_depend>rebearm_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
