<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rebearm_yolo</name>
  <version>0.9.1</version>
  <description>Yolo ROS package</description>
  <maintainer email="kalanaratnayake95@gmail.com">kalana</maintainer>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <license>TODO: License declaration</license>

  <depend>sensor_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
